MOre responsive and mobile first. Fixed footer. Header styles

--- a/components/Header.scss
+++ b/components/Header.scss
@@ -8,7 +8,7 @@
     height: 60px;
     width: 100%;
 
-    padding: 0 20px;
+    padding: 0 10px;
 
     font-family: $logo-font;
     font-size: 24px;
@@ -21,12 +21,26 @@
     cursor: pointer;
   }
 
-  .subheader {
+  .title {
+    margin-top: 5px;
+  }
+
+  .subtitle {
     color: black;
-    font-family: $logo-font;
+    font-family: $core-font;
     font-size: 16px;
     font-weight: normal;
     float: right;
+  }
+
+  @media only screen and (max-width: 767px) {
+    .Header {
+      height: 40px;
+      font-size: 20px;
+    }
+    .subtitle {
+      font-size: 10px;
+    }
   }
 
   svg {
