--- a/components/Index.scss
+++ b/components/Index.scss
@@ -5,6 +5,8 @@
   html, body, #__next {
     height: 100%;
     width: 100%;
+    display: flex;
+    flex-direction: column;
   }
   
   body {
@@ -40,11 +42,5 @@
   }
   
   .footer {
-    position: sticky;
-    left: 0;
-    bottom: 0;
-    margin-bottom: .1em;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
+    flex-shrink: 0;
   }
