--- a/components/Layout.scss
+++ b/components/Layout.scss
@@ -1,7 +1,7 @@
 @import "../theme/theme";
 
 .Layout {
-    flex: 1;
+    flex: 1 0 auto;
     display: flex;
     flex-direction: column;
   
@@ -31,9 +31,31 @@
       }
 
       .ui.grid {
+        width: 70%;
         margin-top: .75em;
         margin-bottom: .75em;
-        padding: 0 20em;
+        padding: 0 2em;
+      }
+
+      @media only screen and (max-width: 767px) {
+        /* For mobile phones: */
+        .ui.grid {
+          width: 100%;
+        }
+      }
+
+      @media only screen and (max-width: 1200px) {
+        /* For Large SCreens: */
+        .ui.grid {
+          width: 90%;
+        }
+      }
+
+      @media only screen and (min-width: 1201px) {
+        /* For Large SCreens: */
+        .ui.grid {
+          width: 75%;
+        }
       }
       
       .columns {
@@ -42,9 +64,12 @@
         margin-top: -.75rem;
       }
       
-      .ui.card {
-        margin-left: .5em;
-        padding: .5rem;
+      @media only screen and (max-width: 600px) {
+        /* For mobile phones: */
+        .ui.card {
+          margin-right: .5em;
+          padding: .5rem;
+        }
       }
 
       .meta {
